refactor(learning): 优化课程学习服务中的列表转换逻辑
- 将 Stream 的 toList() 方法替换为 Collectors.toList() 以确保兼容性
- 保持了原有的批量保存课程到数据库的功能不变